[package]
name = 'whos'
version = '0.2.0'
edition = '2021'
description = 'whois library'
categories = ['web-programming']
keywords = ['whois', 'domain-name']
homepage = 'https://github.com/nc7s/whos'
repository = 'https://github.com/nc7s/whos.git'
authors = ['Blair Noctis <n@sail.ng>']
license = 'BSD-3-Clause'

include = ['src/', 'examples/', 'Cargo.*', '*.adoc', '*.toml', 'LICENSE']

[dependencies]
lazy-regex = '3'
punycode = '0.4'
phf = { version = '0.11', features = ['macros'] }
thiserror = '1'
chrono = { version = '0.4', optional = true }
time = { version = '0.3', optional = true, features = ['parsing'] }

[features]
chrono = ['dep:chrono']
time = ['dep:time']

[workspace]
members = ['build-data']
