[package]
name = 'whos'
version = '0.3.0'
edition = '2021'
description = 'whois library'
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

include = ['src/', 'examples/', 'Cargo.*', '*.adoc', '*.toml', 'LICENSE']

[dependencies]
whos-data = { version = '0.1.0', path = 'data' }
lazy-regex = '3'
punycode = '0.4'
thiserror = '1'
chrono = { version = '0.4', optional = true }
time = { version = '0.3', optional = true, features = ['parsing'] }

[features]
chrono = ['dep:chrono']
time = ['dep:time']

[workspace]
members = ['build-data', 'data']

[workspace.package]
categories = ['web-programming']
keywords = ['whois', 'domain-name']
homepage = 'https://github.com/nc7s/whos'
repository = 'https://github.com/nc7s/whos.git'
authors = ['Blair Noctis <n@sail.ng>']
license = 'BSD-3-Clause'
